[workspace]
resolver = "2"
members = [
    "crates/rlsl",
    "crates/rlsl-sys",
    "crates/rlsl-rec",
    "crates/rlsl-rec-gui",
    "crates/rlsl-wasm",
    "crates/rlsl-gen",
    "crates/rlsl-bench",
    "crates/rlsl-convert",
    "crates/rlsl-cli",
]
# rlsl-py requires maturin, rlsl-fuzz requires nightly — exclude from default build
exclude = ["crates/rlsl-py", "crates/rlsl-fuzz"]

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/eugenehp/rlsl"

[workspace.dependencies]
# Async runtime & networking
tokio = { version = "1.35", features = ["net", "rt-multi-thread", "time", "sync", "macros", "io-util"] }
socket2 = { version = "0.5", features = ["all"] }

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1.17"

# Serialization / formats
serde = { version = "1.0", features = ["derive"] }
quick-xml = "0.27"
bytes = "1"

# Utilities
uuid = { version = "1.4", features = ["v4"] }
hostname = "0.3"
fxhash = "0.2"
log = "0.4"
anyhow = "1.0"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async
futures = "0.3"

# Internal
rlsl = { version = "0.0.2", path = "crates/rlsl" }
exg = { version = "0.0.5" }
rlsl-rec = { path = "crates/rlsl-rec" }

# Criterion benchmarks
[workspace.dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[profile.bench]
debug = true
