[package]
name = "lsl-py"
description = "Python bindings for lsl-core — Lab Streaming Layer in pure Rust"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
publish = false  # published to PyPI, not crates.io

[lib]
name = "pylsl"
crate-type = ["cdylib"]

[dependencies]
lsl-core = { path = "../lsl-core" }
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
ndarray = "0.16"
